apps/crd-schema-publisher/site/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.wynning.tech/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: k8s-schemas
spec:
  parentRefs:
    - name: envoy-towonel
      namespace: networking
      sectionName: https
  hostnames:
    - "k8s-schemas.wynning.tech"
  rules:
    - backendRefs:
        # - name: k8s-schemas-anubis
        #   port: 8080
        - name: garage-cluster
          namespace: default
          port: 3902
